corrected hoffset and voffset

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -49,9 +49,9 @@
 
 
 \textwidth 17.5cm
-\hoffset -2cm
+\hoffset -0.7cm
 \textheight 24cm
-\voffset -1cm
+%\voffset 1cm
 
 
 \setcounter{secnumdepth}{4
@@ -4702,7 +4702,6 @@ model (see Appendix~\ref{ex:definedconcepts} for an example); this may be intere
 models.
 
 \newpage
-\voffset -2cm
 \begin{figure}
   \centering
     \includegraphics[scale=0.47]{mof/oms.png}
@@ -4712,7 +4711,6 @@ models.
 
 \newpage
 
-\voffset -1cm
 
 The DOL metamodel for extension OMS is shown in Fig.~\ref{fig:extension&closure}.
 \syntax{ExtendingOMS} is a subclass of \syntax{OMS}, containing
