--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3788,11 +3788,7 @@ e.g.\ \url{http://www.example.org/uml/atm.xmi} }
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,escapechar=@,mathescape]
 refinement abstract_to_concrete_atm =
-  psm refined via translation psm2atm to 
-       {  atm with Idle |-> Idle, CardEntered |-> Idle, 
-                   PINEntered |-> Idle, Verified |-> Idle, 
-                   Verifying |-> Verifying 
-          hide card, PIN   }
+  psm refined via translation psm2sm to { atm and bank }
 end
 \end{lstlisting}
 
