commented out certain renewcommands

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -453,9 +453,9 @@ author=,date=,id=,replyto=,type=}{}%
 \newcommand{\holds}[1]{\ensuremath\mathtt{Holds}_{#1}\xspace}
 \newcommand{\apply}[1]{\ensuremath\mathtt{App}_{#1}\xspace}
 %% renewing the command since it is already part of isov2 style
-\renewcommand{\outofscopename}{The following are outside the scope of this }
-\renewcommand{\pagename}{Page}
-\renewcommand{\tbpname}{To be published.}
+%\renewcommand{\outofscopename}{The following are outside the scope of this }
+%\renewcommand{\pagename}{Page}
+%\renewcommand{\tbpname}{To be published.}
 \renewcommand{\annexrefname}{annex}
 \renewcommand{\clauserefname}{clause}
 \renewcommand{\examplerefname}{example}
@@ -464,9 +464,9 @@ author=,date=,id=,replyto=,type=}{}%
 \renewcommand{\tablerefname}{Table}
 \renewcommand{\pagerefname}{page}
 \renewcommand{\refname}{}
-\renewcommand{\isourl}[1]{\texttt{<}\url{#1}\texttt{>}}
+%\renewcommand{\isourl}[1]{\texttt{<}\url{#1}\texttt{>}}
 \renewcommand{\aref}[1]{\annexrefname~\ref{#1}}
-\renewcommand{\bref}[1]{\cite{#1}}
+%\renewcommand{\bref}[1]{\cite{#1}}
 \renewcommand{\cref}[1]{\clauserefname~\ref{#1}}
 \renewcommand{\eref}[1]{\examplerefname~\ref{#1}}
 \renewcommand{\fref}[1]{\figurerefname~\ref{#1}}
@@ -3312,9 +3312,9 @@ integrated ontology -- even across different ontology languages. Thus, \DOL  ena
 developers to utilize the complete, and most expressive, foundational ontologies for ontology 
 integration and validation purposes. 
 
-The foundational ontology (FO) repository Repository of Ontologies for MULtiple USes (ROMULUS) \footnote{See \isourl{http://www.thezfiles.co.za/ROMULUS/home.html}}
+The foundational ontology (FO) repository Repository of Ontologies for MULtiple USes (ROMULUS) \footnote{See \url{http://www.thezfiles.co.za/ROMULUS/home.html}}
 contains alignments\index{alignment} between a number of foundational ontologies, expressing semantic relations between the aligned
-entities.  For this use-case three such ontologies are considered, containing spatial and temporal concepts: DOLCE\footnote{See \isourl{http://www.loa.istc.cnr.it/DOLCE.html}}, GFO\footnote{See \isourl{http://www.onto-med.de/ontologies/gfo/}} and BFO\footnote{See \isourl{http://www.ifomis.org/bfo/}}, and present alignments between them 
+entities.  For this use-case three such ontologies are considered, containing spatial and temporal concepts: DOLCE\footnote{See \url{http://www.loa.istc.cnr.it/DOLCE.html}}, GFO\footnote{See \url{http://www.onto-med.de/ontologies/gfo/}} and BFO\footnote{See \url{http://www.ifomis.org/bfo/}}, and present alignments between them 
 using \DOL syntax:
 
 \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,from},escapechar=@,mathescape]
