--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8023,7 +8023,24 @@ $\cM = \{ (F, F) \mid F \in \Mod(G)\}$.
 %$\cM = \{ (\beta_{\Sigma_1}(M_1\forget{\sigma_1}), M_2) \mid
 %(M_1, M_2) \in \cM' \}$.
 
-If $r$ is \syntax{SimpleRefinement},
+If $r$ is \syntax{SimpleOMSRefinement},
+$$sem(\Gamma, r) = 
+((G_1,G_2),\sigma', \cM)$$
+where\\
+ $sem(\Gamma,  r.\syntax{source}) = (\cI_1,\Sigma_1,\cM_1,\Delta_1)$,\\
+ $sem(\Gamma,  r.\syntax{target}) = (\cI_2,\Sigma_2,\cM_2,\Delta_2)$,\\ 
+ $sem(\Gamma, \Sigma_1, \Sigma_2, r.\syntax{refMap}) = (\rho = (\Phi,\alpha,\beta):\cI_1\to\cI_2,\sigma:\Phi(\Sigma_1)\to\Sigma_2)$,\\
+ $G_1$ and $G_2$ are graphs consisting each of one isolated node
+ labeled $(\Name(r.\syntax{source}),\cI_1,\Sigma_1,\cM_1,\Delta_1)$ and
+ respectively $(\Name(r.\syntax{target}),\cI_2,\Sigma_2,\cM_2,\Delta_2)$,
+ the network morphism $\sigma'$ maps the node of $\Name(r.\syntax{source})$ to
+ the node of $\Name(r.\syntax{target})$ via $(\rho, \sigma)$
+ and $\cM = \{ (\beta_{\Sigma_2}(M\forget{\sigma}), M) \mid M \in \cM_2 \}$.\\
+ The refinement is correct only if $\beta_{\Sigma_2}(M\forget{\sigma})\in \cM_1$,
+ for each $M\in\cM_2$.
+ 
+
+If $r$ is \syntax{SimpleNetworkRefinement},
 $$sem(\Gamma, r) = 
 ((G_1,G'_2),\sigma', \cM')$$
 where\\
@@ -8035,7 +8052,9 @@ where\\
  and 
  $\cM = \{(F_1,F_3) \mid \exists F_2 \text{ such that } 
                          (F_1, F_2\forget{\sigma}) \in \cM_1       
-                         \text{ and } (F_2, F_3) \in \cM_2 \}$.
+                         \text{ and } (F_2, F_3) \in \cM_2 \}$.\\
+ The refinement is correct only if for each $(F_2,F_3) \in \cM_2$,
+ there is a $(F_1,F_2\forget{\sigma}) \in \cM_1$.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -8513,8 +8532,7 @@ $cvalues = \begin{cases}
  True& \text{ otherwise }
 \end{cases}
 $\\
-$sem(\Gamma,\Sigma_1,c.generalizedTerm) = sym1$, \ednote{How do we get a symbol from an IRI? TM: we would need an institution-specific function for this.
-But I think it is easier to assume that symbols \emph{are} IRIs.}
+$sem(\Gamma,\Sigma_1,c.generalizedTerm) = sym1$, 
 $sem(\Gamma,\Sigma_2,c.symbolRef) = sym2$,
 $clist = Sequence((rel, sym1, sym2))$,
 
