footnote on global domain

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9225,7 +9225,8 @@ We distinguish three cases.
         and $\varphi_t$ maps each symbol $s$ in $\Sigma_t$ to $2:s$.
   \item $\Delta$ is constructed in the same way as in the previous case, except
         that if \verb+Thing+ appears in a correspondence, it is replaced by
-        $\top_s$ or $\top_t$. 
+        $\top_s$ or $\top_t$.\footnote{An extension of the language where complex concepts are allowed in alignments would make the construction of $\Delta$ in this
+        case substantially different to the one in the previous case.} 
   \end{itemize}
         \item Contextualized domain:
  \begin{itemize}
