commented out unused newcommand

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -513,7 +513,7 @@ author=,date=,id=,replyto=,type=}{}%
 %% Commented out to remove the redundancy. and wrong use of \chapter command, since \chapter command is not part of isov2.
 
 %\renewcommand{\clause}[1]{\chapter{#1}}
-\newcommand{\clauseN}[1]{\chapter{#1} \normative}
+%\newcommand{\clauseN}[1]{\chapter{#1} \normative}
 \newcommand{\clauseI}[1]{\clause{#1} \informative}
 %\renewcommand{\sclause}[1]{\section{#1}}
 %\renewcommand{\ssclause}[1]{\subsection{#1}}
@@ -524,7 +524,7 @@ author=,date=,id=,replyto=,type=}{}%
 \newcommand{\nisref}[1]{#1}
 \renewcommand{\subjectfield}[1]{} % {#1}
 \renewcommand{\normannex}[1]{ \sclause{Annex: #1} \normative}
-%\renewcommand{\infannex}[1]{ \sclause{Annex: #1}  \informative }
+%\renewcommand{\infannex}[1]{\sclause{Annex: #1}  \informative }
 \renewenvironment{definitions}[0]{\medskip }{}
 \renewenvironment{note}[0]{\ \\ \textsc{Note} \quad}{}
 \renewenvironment{example}[0]{\ \newline \textsc{Example}\quad }{}
@@ -8834,7 +8834,7 @@ $name_2 = 'relativized'++aName'$.
 % \vspace*{\fill}
 % \begin{center}
 % \begin{minipage}{0.3\textwidth}
-% \clause*{\Huge Annex}
+% \listannexname
 % \end{minipage}
 % \end{center}
 % \vfill % equivalent to \vspace{\fill}
