A little bit in the bibliography.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3520,7 +3520,7 @@ those industries such as in microprocessor design.
 
 Typically, a requirement specification is refined into a
 design specification and then an implementation, often involving
-several intermediate steps (see, e.g. the V-model \cite{V-model}, although
+several intermediate steps (see, e.g. the V-model~\cite{V-model}, although
 this does not require formal specification).  There are numerous
 specification formalisms in use, including the OMG's SysML language;
 moreover, often during development, the formalism needs to be changed
