--- a/Standard/dol-papers.bib
+++ b/Standard/dol-papers.bib
@@ -1,4 +1,4 @@
-@InProceedings{OM2014,
+@InProceedings{OM2014-repeated,
   author = {Mihai Codescu and Till Mossakowski and Oliver Kutz},
   title = {A Categorical Approach to Ontology Alignment},
   year = {2014},
@@ -18,7 +18,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 }
 
 
-@incollection{JYB-Festschrift2015-DOL,
+@incollection{JYB-Festschrift2015-DOL-repeated,
 	Author = {Till Mossakowski and Mihai Codescu and Fabian Neuhaus and Oliver Kutz},
 	title = {{The distributed ontology, modelling and specification language - DOL}},
 	Date-Added = {2015-01-15 22:16:06 +0000},
@@ -30,7 +30,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 	Year = {2015}}
 
 
-@inproceedings{womo13,
+@inproceedings{womo13-repeated,
 	Author = {Till Mossakowski AND Oliver Kutz AND Mihai Codescu AND Christoph Lange},
 	Booktitle = {{Proceedings of the 7th International Workshop on Modular Ontologies (WoMO-13)}},
 	Date-Added = {2013-11-18 17:14:46 +0000},
@@ -42,7 +42,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 	Year = {2013}}
 
 
-@inproceedings{DOL-TKE2012,
+@inproceedings{DOL-TKE2012-repeated,
 	Address = {Madrid, Spain},
 	Author = {C. Lange AND T. Mossakowski AND O. Kutz AND C. Galinski AND M. Gr\"uninger AND D. Couto Vale},
 	Booktitle = {Proc.\ of the 10th Terminology and Knowledge Engineering Conference (TKE 2012)},
@@ -52,7 +52,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 	Year = {2012}}
 
 
-@inproceedings{DOL-3semantics,
+@inproceedings{DOL-3semantics-repeated,
 	Author = {Till Mossakowski AND Christoph Lange AND Oliver Kutz},
 	Booktitle = {7th International Conference on {F}ormal {O}ntology in {I}nformation {S}ystems (FOIS)},
 	Date-Added = {2012-02-07 22:11:18 +0000},
@@ -67,7 +67,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 	Year = {2012}}
 
 
-@inproceedings{blendingc3gi12,
+@inproceedings{blendingc3gi12-repeated,
 	Address = {Montpellier, France},
 	Author = {O. Kutz AND T. Mossakowski AND J. Hois AND M. Bhatt AND J. Bateman},
 	Booktitle = {Computational Creativity, Concept Invention, and General Intelligence, Proc.\ of the 1st Int.\ Workshop C3GI@ECAI},
@@ -81,7 +81,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 	Year = {2012}}
 	
 
-@article{hyper2010,
+@article{hyper2010-repeated,
 		Author = {O. Kutz AND T. Mossakowski AND D. L\"ucke},
 		Date-Added = {2011-10-20 16:27:34 +0000},
 		Date-Modified = {2011-10-20 16:27:34 +0000},
