--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -317,10 +317,10 @@ ZimmerEuze06,
   year = 2003,
 }
 
-@article{dolce-web,
+@misc{dolce-web,
   author = {C. Masolo and S. Borgo and A. Gangemi and N. Guarino and A. Oltramari},
-  title = {Descriptve Ontology for Linguistic and Cognitive Engineering},
-  journal = {\url{http://www.loa.istc.cnr.it/DOLCE.html}},
+  title = {Descriptive Ontology for Linguistic and Cognitive Engineering},
+  note = {\url{http://www.loa.istc.cnr.it/DOLCE.html}},
 }
 
 
@@ -586,6 +586,7 @@ We distinguish three kinds of heterogeneity:
 
 @TechReport{CommonLogic:base,
   key = {CommonLogic},
+  author = {ISO/IEC},
   title = {Information technology --- {Common Logic} ({CL}): a framework for a family of logic-based languages},
   institution = {ISO/IEC},
   number = {24707:2007},
@@ -902,15 +903,15 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 }
 
 
-@inbook{JYB-Festschrift2015-DOL,
+@incollection{JYB-Festschrift2015-DOL,
 	Author = {T. Mossakowski AND M. Codescu AND F. Neuhaus AND O. Kutz},
-	Chapter = {{The distributed ontology, modelling and specification language - DOL}},
+	title = {{The distributed ontology, modelling and specification language - DOL}},
 	Date-Added = {2015-01-15 22:16:06 +0000},
 	Date-Modified = {2015-01-15 22:19:05 +0000},
 	Editor = {Koslow, Arnold AND Buchsbaum, Arthur},
 	Publisher = {Birkh\"auser},
 	Series = {Studies in Universal Logic},
-	Title = {{The Road to Universal Logic--Festschrift for 50th birthday of Jean-Yves Beziau, Volume II}},
+	bookTitle = {{The Road to Universal Logic--Festschrift for 50th birthday of Jean-Yves Beziau, Volume II}},
 	Year = {2015}}
 
 
@@ -1003,7 +1004,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
   TYPE = {Specification},
   INSTITUTION = {Object Management Group},
   NUMBER = {formal/2015-03-01},
-  YEAR = {2015}
+  YEAR = {2015},
 }
 
 @TECHREPORT{uml-2.4.1-super,
@@ -1012,6 +1013,13 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
   TYPE = {Specification},
   INSTITUTION = {Object Management Group},
   NUMBER = {formal/2011-08-06},
-  YEAR = {2011}
+  YEAR = {2011},
 }
 
+@BOOK{V-model,
+  AUTHOR = {Roger S. Pressman},
+  TITLE = {Software Engineering: A Practitioner's Approach},
+  PUBLISHER = {The McGraw-Hill Companies},
+  EDITION = {8th},
+  YEAR = {2014},
+}
