--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8126,29 +8126,32 @@ $\cM = \{ (F, F) \mid F \in \Mod(G)\}$.
 
 If $r$ is \syntax{SimpleOMSRefinement},
 $$sem(\Gamma, r) = 
-((G_1,G_2),\sigma', \cM)$$
+((G_1,G'_2),\sigma', \cM)$$
 where\\
- $sem(\Gamma,  r.\syntax{source}) = (\cI_1,\Sigma_1,\cM_1,\Delta_1)$,\\
- $sem(\Gamma,  r.\syntax{target}) = (\cI_2,\Sigma_2,\cM_2,\Delta_2)$,\\ 
- $sem(\Gamma, \Sigma_1, \Sigma_2, r.\syntax{refMap}) = (\rho = (\Phi,\alpha,\beta):\cI_1\to\cI_2,\sigma:\Phi(\Sigma_1)\to\Sigma_2)$,\\
- $G_1$ and $G_2$ are graphs consisting each of one isolated node
- labeled $(\Name(r.\syntax{source}),\cI_1,\Sigma_1,\cM_1,\Delta_1)$ and
- respectively $(\Name(r.\syntax{target}),\cI_2,\Sigma_2,\cM_2,\Delta_2)$,
- the network morphism $\sigma'$ maps the node of $\Name(r.\syntax{source})$ to
- the node of $\Name(r.\syntax{target})$ via $(\rho, \sigma)$
- and $\cM = \{ (\beta_{\Sigma_2}(M\forget{\sigma}), M) \mid M \in \cM_2 \}$.\\
- The refinement is correct only if $\beta_{\Sigma_2}(M\forget{\sigma})\in \cM_1$,
- for each $M\in\cM_2$.
+ $sem(\Gamma,  r.\syntax{refinement}) = ((G_1,G'_1), \sigma_1,\cM_1)$,\\
+ $sem(\Gamma,  r.\syntax{refinement2}) = ((G_2, G'_2),\sigma_2, \cM_2)$,\\ 
+ $G'_1$ and $G_2$ are both graphs with one isolated node, labeled
+ $(name1,\cI_1,\Sigma_1,\cM_1,\Delta_1)$
+ and respectively
+ $(name2,\cI_2,\Sigma_2,\cM_2,\Delta_2)$,
+ $sem(\Gamma, \Sigma_1, \Sigma_2, r.\syntax{omsRefinementMap}) = (\rho = (\Phi,\alpha,\beta):\cI_1\to\cI_2,\sigma:\Phi(\Sigma_1)\to\Sigma_2)$,\\
+ $\sigma'$ maps the node $n$ of $G_1$ to the node of $G_3$ and 
+ $(\sigma')^M_n = (\sigma_1)^M_n;(\rho;\sigma);(\sigma_2)^M_{\sigma_1^G(n)}$,\\
+ and $\cM = \{ (M_1, M_3)\mid \exists M_2 such that (M_2,M_3) \in \cM_2 and
+  (M_1,M_2\forget{(\rho,\sigma)}) \in \cM_1 \}$.\\
+ The refinement is correct only if
+ for each $(M,N)\in\cM_2$, 
+ there exists
+ $(M_1,M_2\forget{(\rho,\sigma)})\in \cM_1$.
  
 
 If $r$ is \syntax{SimpleNetworkRefinement},
 $$sem(\Gamma, r) = 
 ((G_1,G'_2),\sigma', \cM')$$
 where\\
- $sem(\Gamma,  r.\syntax{refinementSource}) = ((G_1,G'_1), \sigma_1,\cM_1)$,\\
- $sem(\Gamma,  r.\syntax{refinementTarget}) = ((G_2, G'_2),\sigma_2, \cM_2)$,\\ 
- $sem(\Gamma, G'_1, G_2, r.\syntax{refMap}) = \sigma:G'_1\to G_2$,\\
- $sem(\Gamma, G_1, G_2, r.\syntax{networkRefinementMap}) = \sigma_1:G_1\to G'_1$,\\
+ $sem(\Gamma,  r.\syntax{refinement}) = ((G_1,G'_1), \sigma_1,\cM_1)$,\\
+ $sem(\Gamma,  r.\syntax{refinement2}) = ((G_2, G'_2),\sigma_2, \cM_2)$,\\ 
+ $sem(\Gamma, G'_1, G_2, r.\syntax{networkRefinementMap}) = \sigma:G'_1\to G_2$,\\
  $\sigma' = \sigma_1;\sigma;\sigma_2$ \\
  and 
  $\cM = \{(F_1,F_3) \mid \exists F_2 \text{ such that } 
