header updated with new document numbers

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -608,11 +608,11 @@ Version \version
 \vskip 12pt 
 \nointerlineskip
 
-OMG Document Number: ad/2015-08-01  \\ %ad/2015-05-03 ad/15-06-04
+OMG Document Number: ad/2015-10-01   \\  %ad/2015-08-01 ad/2015-05-03 ad/15-06-04
 %Normative reference: \\
-Machine readable files (normative): ad/2015-08-03, ad-2015-07-02\\
-%Normative: \\
-%Informative: \\
+Machine readable files: \\ %%ad/2015-08-03, ad-2015-07-02\\
+Normative:  ad/2015-10-02\\
+Informative: ad/2015-10-03\\
  
 
 \vskip 12pt
