--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5045,8 +5045,8 @@ InterpretationName ::= IRI
 InterpretationType ::= GroupOMS 'to' GroupOMS
 Refinement         ::= GroupOMS
                      | NetworkName
-                     | Refinment 'refined' [RefMap] 'to' Refinement
-                     | Refinment 'interpreted' [RefMap] 'by' Refinement
+                     | Refinement 'refined' [RefMap] 'to' Refinement
+                     | Refinement 'interpreted' [RefMap] 'by' Refinement
 RefMap             ::= 'via' LanguageTranslation [SymbolMap]
                      | 'via' [LanguageTranslation] SymbolMap
                      | 'via' Refinement ( ',' Refinement )*
