Try to align `InterpretationDefinition` with abstract syntax
It's highly weird, as `RefinementDefinition` and
`InterpretationDefinition` are two distinct and seemingly unrelated
classes in the abstract syntax, whereas in the concrete syntax
`InterpretationDefinition` may also define a refinement, so the two
distinct abstract concepts somehow map the same concrete concept, just
written differently.
The confusion is magnified by the fact that three keywords may be used
interchangeably in the concrete syntax so two distinct abstract
"nonterminals" map the same set of concrete keywords.
I tried to make these things a little bit clearer in this commit but
don't know whether it succeeded.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5027,19 +5027,14 @@ MappingDefinition  ::= InterpretationDefinition
                      | EquivalenceDefinition
                      | ConservativeExtensionDefinition
                      | AlignmentDefinition
-InterpretationDefinition ::= InterpretationKeyword
-                             InterpretationName
-                             [Conservative] ':'
-                             InterpretationType 'end'
-                     | InterpretationKeyword
-                             InterpretationName
-                             [Conservative] ':'
-                             InterpretationType '='
-                             LanguageTranslation*
-                             [SymbolMap] 'end'
-                     | InterpretationKeyword
-                             InterpretationName '='
-                             Refinement 'end'
+InterpretationDefinition ::= InlineInterpretation | RefinementDefinition
+InlineInterpretation ::= InterpretationKeyword InterpretationName
+                         [Conservative] ':' InterpretationType
+                         [ '=' LanguageTranslation* [SymbolMap] ]
+                         'end'
+RefinementDefinition ::= InterpretationKeyword InterpretationName '='
+                         Refinement
+                         'end'
 InterpretationKeyword ::= 'interpretation' | 'view' | 'refinement'
 InterpretationName ::= IRI
 InterpretationType ::= GroupOMS 'to' GroupOMS
